deploy/cicd/tekton/p-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: p
  name: p
spec:
  rules:
    - host: p.com
      http:
        paths:
          - backend:
              service:
                name: el-p-git-repo
                port:
                  name: port-8080
            path: /el-p-git-repo
            pathType: Prefix
status:
  loadBalancer: {}
